@@ -10,6 +10,7 @@ NEW FEATURES
 BUGFIXES
 
  * Issue 292: (Linux) race condition in process files/threads/connections.
+ * Issue 294: (Windows) Process CPU affinity is only able to set CPU #0.
 
 
 0.5.0 - 2012-06-27
